--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="heading">
     <h3 style="text-align: center;">Projects</h3>
     </div>
-        <p>My interest in coding was initially close to nill. It was only after I met a freind, a coding enthusiast, my Interest sparked. I started coding during  lockdown to kill the everlasting boredom. Initially I learned HTML and then CSS for a <b><a href="https://www.udemy.com/">Udemy</a></b> course, my elder brother already bought. After learning these, I built 3 project, namely, <b>HTML Tutorial, Demonslayer TV and Me</b>. As the name suggests these website were to learn HTML, watch the Anime "Demonslayer" and learn about me, respectively.</p>
+        <p>My interest in coding was initially close to nill. It was only after I met a freind, a coding enthusiast, my Interest sparked. I started coding during  lockdown to kill the everlasting boredom. Initially I learned HTML and then CSS from a <b><a href="https://www.udemy.com/">Udemy</a></b> course, my elder brother already bought. After learning these, I built 3 project, namely, <b>HTML Tutorial, Demonslayer TV and Me</b>. As the name suggests these website were to learn HTML, watch the Anime "Demonslayer" and learn about me, respectively.</p>
         <br>
         <p>However, in 2021, The early coder, Rayyan, unknown of the platforms like GITHUB to store the code, lost all the three projects after losing a battle from a computer virus. SORRYY!!!</p>
     </section>
